deploy/water-dev/ingress/water-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: water
  namespace: water
spec:
  ingressClassName: nginx
  rules:
  - host: water.harvey.moomboo.space
    http:
      paths:
      - backend:
          service:
            name: water
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - water.harvey.moomboo.space
    secretName: water-tls
